[package]
authors = [
  "David Pedersen <david.pdrsn@gmail.com>",
  "Ari Seyhun <ariseyhun@live.com.au>",
]
description = "A Rust proc-macro attribute parser"
edition = "2018"
homepage = "https://github.com/Acidic9/bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "better-bae-macros"
readme = "README.md"
repository = "https://github.com/Acidic9/bae.git"
version = "0.1.9"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0"
heck = "0.4"

[dev_dependencies]
trybuild = "1"

[lib]
proc-macro = true
path = "src/lib.rs"
