[package]
authors = [
  "David Pedersen <david.pdrsn@gmail.com>",
  "Ari Seyhun <ariseyhun@live.com.au>",
]
description = "A Rust proc-macro attribute parser"
edition = "2018"
homepage = "https://github.com/Acidic9/bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "better-bae"
readme = "README.md"
repository = "https://github.com/Acidic9/bae.git"
version = "0.1.9"

[dependencies]
better-bae-macros = { path = "../better-bae-macros", version = "0.1.8" }
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
